Automatically pulling tsd defs.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-tsd": "^0.1.1",
     "gulp-typescript": "^2.12.1",
     "gulp-watch": "^4.3.5",
     "merge2": "^1.0.1"
