--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "angular-aria": "^1.5.2",
     "angular-material": "^1.0.6",
     "angular-messages": "^1.5.2",
+    "angular-route": "^1.5.2",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
     "gulp-tsd": "^0.1.1",
     "gulp-typescript": "^2.12.1",
     "gulp-watch": "^4.3.5",
+    "jshint": "^2.9.1",
     "merge2": "^1.0.1"
   }
 }
