--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-animate": "^1.5.2",
     "angular-aria": "^1.5.2",
     "angular-material": "^1.0.6",
+    "angular-material-icons": "^0.6.0",
     "angular-messages": "^1.5.2",
     "angular-route": "^1.5.2",
     "del": "^2.2.0",
